# Lam

./: .gitignore  README.md  pyproject.toml
lag/: __init__.py  config.py  data.py  infer.py  model.py  tokenizer.py  train.py
tests/: test_data.py  test_model.py  test_tokenizer.py
